Just added text align center to body in CSS

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+body {
+    text-align: center;
+}
 code {
     font-family: monospace;
     color: black;
@@ -5,6 +8,7 @@ code {
     padding: auto;
     font-size: 100%;
 }
+
 h2 {
     color: green;
 }
