--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,7 @@ article {
     display: grid;
     grid-template-columns: 100px 100px 100px;
     grid-template-rows: 50px 50px 50px;
+    grid-column-gap: 20px;    
 }
 .css-grid-units {
     display: grid;
